--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.4.30'
+    id 'jacoco'
 }
 
 group 'ru.netology'
@@ -11,7 +11,5 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    implementation 'junit:junit:4.12'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'junit:junit:4.12'
 }
